Fix horizontal spacing of ToC

--- a/src/components/RightSidebar/TableOfContents.css
+++ b/src/components/RightSidebar/TableOfContents.css
@@ -10,7 +10,6 @@
 
 .toc-mobile-container {
 	--header-bottom-padding: 1.5rem;
-	font-size: var(--theme-text-sm);
 }
 
 @media (min-width: 50em) {
@@ -52,6 +51,7 @@
 	border: 1px solid var(--theme-shade-subtle);
 	padding: 0.25rem 0.75rem;
 	padding-inline-end: 0.5rem;
+	font-size: var(--theme-text-sm);
 }
 
 .toc-toggle svg {
@@ -100,6 +100,7 @@
 	border: 1px solid var(--theme-shade-subtle);
 	border-radius: 0.5rem;
 	padding: 0.5rem 0;
+	font-size: var(--theme-text-sm);
 	background: linear-gradient(var(--theme-bg-offset), var(--theme-bg-offset)), var(--theme-bg-gradient);
 	transform: translateY(calc(-0.5rem - 0.5 * var(--header-bottom-padding)));
 }
